--- a/hemsida.css
+++ b/hemsida.css
@@ -90,3 +90,7 @@ footer {
     border-radius: 5px;
     background-color: #f9f9f9;
 }
+img {
+    width: 75px;
+    height: auto; /* För att behålla proportionerna */
+}
