--- a/hemsida.css
+++ b/hemsida.css
@@ -111,4 +111,15 @@ button {
   button:hover {
     background-color: #e9e9e9;
   }
+  .order-item {
+    border: 1px solid #ccc;
+    padding: 15px;
+    margin: 10px 0;
+    border-radius: 5px;
+  }
+  
+  .order-item p {
+    margin: 8px 0;
+    line-height: 1.4;
+  }
   
