--- a/hemsida.css
+++ b/hemsida.css
@@ -90,7 +90,7 @@ footer {
     border-radius: 5px;
     background-color: #f9f9f9;
 }
-img {
+#logo img {
     width: 75px;
     height: auto; /* För att behålla proportionerna */
 }
