--- a/hemsida.css
+++ b/hemsida.css
@@ -3,6 +3,8 @@ body, h1, p, ul, li, a {
     margin: 0;
     padding: 0;
 }
+
+/* Övriga stilinställningar */
 .services-img {
     max-width: 100%;
     height: auto;
@@ -58,17 +60,19 @@ footer {
     text-align: center;
     padding: 10px 0;
 }
+
 .order-container {
-    max-height: 400px; /* Maximal höjd med skrollfunktion */
-    overflow-y: auto; /* Lägger till vertikal skrollfunktion vid behov */
+    max-height: 400px;
+    overflow-y: auto;
 }
 
 .order-item {
     border: 1px solid #ccc;
     padding: 10px;
     margin: 10px 0;
+    border-radius: 5px;
 }
-/* Styla sökrutan */
+
 #searchInput {
     width: 100%;
     padding: 10px;
@@ -76,26 +80,11 @@ footer {
     font-size: 16px;
 }
 
-/* Container för resultat */
-.result-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-}
-
-/* Styla varje enskilt resultat */
-.result-item {
-    border: 1px solid #ccc;
-    padding: 15px;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-}
 #logo img {
     width: 75px;
-    height: auto; /* För att behålla proportionerna */
+    height: auto;
 }
 
-/* CSS för orderknappar */
 button {
     display: block;
     width: 100%;
@@ -106,20 +95,20 @@ button {
     border-radius: 5px;
     text-align: left;
     transition: all 0.3s ease;
-  }
-  
-  button:hover {
+}
+
+button:hover {
     background-color: #e9e9e9;
-  }
-  .order-item {
+}
+
+.order-item {
     border: 1px solid #ccc;
     padding: 15px;
     margin: 10px 0;
     border-radius: 5px;
-  }
-  
-  .order-item p {
+}
+
+.order-item p {
     margin: 8px 0;
     line-height: 1.4;
-  }
-  
+}
