--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 button {
-  background-color: chartreuse;
-  width: 100%;
+  background-color: rgb(177, 36, 36);
+  color: white;
+  width: 105px;
   padding: 50px;
+  height: 36px
+
 }
