--- a/style.css
+++ b/style.css
@@ -74,9 +74,11 @@ footer {
 }
 
 #searchInput {
-  width: 100%;
+  width: auto;
   padding: 10px;
   margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 16px;
 }
 
