--- a/style.css
+++ b/style.css
@@ -129,28 +129,22 @@ button:hover {
   color: white;
   width: 105px;
   height: 36px;
-  border-radius: 10px;
+  border-radius: 3px;
   cursor: pointer;
   margin-top: 10px;
   margin-left: 50px;
 }
 
 .test:hover {
-  background-color: rgb(245, 160, 160);
-  color: rgba(255, 255, 255, 0.521);
-  width: 105px;
-  height: 36px;
-  border-radius: 10px;
-  cursor: pointer;
-  margin-top: 10px;
+  opacity: 0.5;
 }
 
 .test:active {
-  background-color: rgb(36, 28, 28);
+  opacity: 0.3;
   color: rgba(255, 255, 255, 0.521);
-  width: 105px;
-  height: 36px;
-  border-radius: 10px;
+  width: 150px;
+  height: 50px;
+  border-radius: 30px;
   cursor: pointer;
   margin-top: 10px;
 }
