--- a/style.css
+++ b/style.css
@@ -133,6 +133,8 @@ button:hover {
   cursor: pointer;
   margin-top: 10px;
   margin-left: 50px;
+  line-height: 0px;
+  padding: 0px;
 }
 
 .test:hover {
