--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ button:hover {
   cursor: pointer;
   margin-top: 10px;
   margin-left: 50px;
+  margin-right: 50px;
   line-height: 0px;
   padding: 0px;
 }
