--- a/hemsida.css
+++ b/hemsida.css
@@ -180,3 +180,13 @@ button:hover {
     color: #007bff; /* Färg för klickbara länkar, du kan ändra detta efter behov */
     text-decoration: none;
 }
+.headertest {
+    background-color: #4a5c69;
+    color: #e9e9e9;
+    position: fixed;
+    height: 60px;
+    z-index: 2000;
+    vertical-align: middle;
+    width: 100%;
+
+}
